almost working, no camera feed, need restructuring html code

--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <title>
-        Wir Helfen
+        Home office Pizza
     </title>
     <script src="js/jquery-3.4.1.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/chessboard-1.0.0.css">
 </head>
 
 <body>
